--- a/css/estilosElementosv3.css
+++ b/css/estilosElementosv3.css
@@ -206,7 +206,7 @@ input{height: 40px!important;margin-bottom: 10px;}
 
 .alert-morado{
     color: white!important;
-    background-color: #332f63;
+    background-color: #462f82;/* #332f63; */
     border-color: transparent;
     border-radius: 10px;}
 .alert-morado strong{ font-size: 20px; }
